--- a/julia/problem_003.ipynb
+++ b/julia/problem_003.ipynb
@@ -85,11 +85,14 @@
    "source": [
     "function max_prime_factor(n, hi)\n",
     "    prime_numbers = eratosthenes(hi)\n",
-    "    # prime_factors = Int64[]\n",
+    "     prime_factors = Int64[]\n",
     "    for p in prime_numbers\n",
-    "        n == p && return p\n",
+    "        if n == p\n",
+    "            push!(prime_factors, p)\n",
+    "            return p #, prime_factors\n",
+    "        end\n",
     "        while n%p == 0\n",
-    "            # push!(prime_factors, p)\n",
+    "            push!(prime_factors, p)\n",
     "            n ÷= p\n",
     "        end\n",
     "    end\n",
@@ -128,7 +131,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  686.750 μs (18702 allocations: 970.84 KiB)\n"
+      "  685.500 μs (18704 allocations: 970.97 KiB)\n"
      ]
     },
     {
@@ -173,7 +176,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  1.629 μs (2 allocations: 128 bytes)\n"
+      "  1.654 μs (2 allocations: 128 bytes)\n"
      ]
     },
     {
