--- a/julia/problem_003.ipynb
+++ b/julia/problem_003.ipynb
@@ -42,26 +42,33 @@
    "id": "fb5b719d",
    "metadata": {},
    "source": [
-    "### Solution 1 (Sieve of Eratosthenes)"
+    "### Solution 1 (Sieve of Eratosthenes, generator)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "172959df",
+   "id": "65651911",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "eratosthenes (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "function eratosthenes(n::Int64)::Vector{Int64}\n",
-    "    \n",
+    "function eratosthenes(c::Channel)\n",
     "    D = Dict{Int64, Vector{Int64}}()\n",
-    "    P = Vector{Int64}()\n",
     "    q = 2\n",
-    "\n",
-    "    while q ≤ n\n",
+    "    while true\n",
     "        if !(q in keys(D))\n",
-    "            D[q * q] = Int64[q] # Vector{Int64}([q])\n",
-    "            push!(P, q)\n",
+    "            D[q * q] = Int64[q]\n",
+    "            put!(c, q)\n",
     "        else\n",
     "            for p in D[q]\n",
     "                haskey(D, p+q) ? push!(D[p+q], p) : D[p+q] = [p]\n",
@@ -70,10 +77,7 @@
     "        end\n",
     "        q += 1\n",
     "    end\n",
-    "    return P\n",
-    "end\n",
-    "\n",
-    "@assert eratosthenes(19) == [2, 3, 5, 7, 11, 13, 17, 19]"
+    "end"
    ]
   },
   {
@@ -83,24 +87,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "function max_prime_factor(n, hi)\n",
-    "    prime_numbers = eratosthenes(hi)\n",
-    "     prime_factors = Int64[]\n",
-    "    for p in prime_numbers\n",
+    "function max_prime_factor(n)\n",
+    "    sieve = Channel(eratosthenes)\n",
+    "    prime_factors = Int64[]\n",
+    "    while true\n",
+    "        p = take!(sieve)\n",
     "        if n == p\n",
     "            push!(prime_factors, p)\n",
-    "            return p #, prime_factors\n",
+    "            return p\n",
     "        end\n",
     "        while n%p == 0\n",
     "            push!(prime_factors, p)\n",
     "            n ÷= p\n",
     "        end\n",
     "    end\n",
-    "    println(\"Incomplete processing, increase the value of 'hi' and run again.\")\n",
-    "    return nothing\n",
     "end\n",
     "\n",
-    "@assert max_prime_factor(13195, 50) == 29"
+    "@assert max_prime_factor(13195) == 29"
    ]
   },
   {
@@ -113,25 +116,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Incomplete processing, increase the value of 'hi' and run again.\n"
-     ]
-    }
-   ],
-   "source": [
-    "max_prime_factor(600851475143, 5_000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "9ec4eb73",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  685.500 μs (18704 allocations: 970.97 KiB)\n"
+      "  22.191 ms (18483 allocations: 833.08 KiB)\n"
      ]
     },
     {
@@ -145,7 +130,7 @@
     }
    ],
    "source": [
-    "@btime max_prime_factor(600851475143, 7_500)"
+    "@btime max_prime_factor(600851475143)"
    ]
   },
   {
@@ -158,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "ee93432e",
    "metadata": {},
    "outputs": [],
@@ -168,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "ebe9b788",
    "metadata": {},
    "outputs": [
@@ -176,7 +161,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  1.654 μs (2 allocations: 128 bytes)\n"
+      "  1.625 μs (2 allocations: 128 bytes)\n"
      ]
     },
     {
@@ -203,13 +188,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "0e920213",
    "metadata": {},
    "outputs": [],
    "source": [
     "include(\"./euler.jl\");\n",
-    "bm = @benchmark max_prime_factor(600851475143, 7_500)\n",
+    "bm = @benchmark max_prime_factor(600851475143)\n",
     "euler.save_benchmark(3, bm);"
    ]
   }
