--- a/julia/problem_003.ipynb
+++ b/julia/problem_003.ipynb
@@ -50,17 +50,7 @@
    "execution_count": 3,
    "id": "65651911",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "eratosthenes (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function eratosthenes(c::Channel)\n",
     "    D = Dict{Int64, Vector{Int64}}()\n",
@@ -77,7 +67,11 @@
     "        end\n",
     "        q += 1\n",
     "    end\n",
-    "end"
+    "end\n",
+    "\n",
+    "sieve = Channel(eratosthenes)\n",
+    "\n",
+    "@assert last([take!(sieve) for _ in 1:10]) == 29 \"10th prime should be 29\""
    ]
   },
   {
@@ -116,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  22.191 ms (18483 allocations: 833.08 KiB)\n"
+      "  22.230 ms (18483 allocations: 833.08 KiB)\n"
      ]
     },
     {
@@ -161,7 +155,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  1.625 μs (2 allocations: 128 bytes)\n"
+      "  1.704 μs (2 allocations: 128 bytes)\n"
      ]
     },
     {
