--- a/python/problem_016.ipynb
+++ b/python/problem_016.ipynb
@@ -5,24 +5,40 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 16\n",
+    "# Problem 16\n",
     "https://projecteuler.net/problem=16"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b172d58b",
+   "id": "81a921cd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python v3.11.10\n"
+     ]
+    }
+   ],
    "source": [
-    "import euler"
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "25c5a564",
+   "metadata": {},
+   "source": [
+    "### Solution"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8685c48f",
+   "id": "3f1c1c0b",
    "metadata": {},
    "outputs": [
     {
@@ -37,26 +53,55 @@
     }
    ],
    "source": [
-    "sum([int(s) for s in str(2**1_000)])"
+    "# answer\n",
+    "sum(map(int, str(2**1000)))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "72d622de",
+   "id": "941a1cd3",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "22 μs ± 200 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "15.9 μs ± 223 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o sum([int(s) for s in str(2**1_000)])\n",
-    "euler.save_benchmark(16, t)"
+    "# benchmark\n",
+    "%timeit sum(map(int, str(2**1000)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ffbd79d",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9d9f420c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15.6 μs ± 23.8 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "bm = %timeit -o sum(map(int, str(2**1000)))\n",
+    "import euler\n",
+    "euler.save_benchmark(16, bm)"
    ]
   }
  ],
@@ -76,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
