--- a/python/problem_020.ipynb
+++ b/python/problem_020.ipynb
@@ -5,7 +5,7 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 20\n",
+    "# Problem 20\n",
     "https://projecteuler.net/problem=20"
    ]
   },
@@ -14,9 +14,25 @@
    "execution_count": 1,
    "id": "537ef396",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python v3.11.10\n"
+     ]
+    }
+   ],
    "source": [
-    "import euler"
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a22bbf8d",
+   "metadata": {},
+   "source": [
+    "### Solution  (function)"
    ]
   },
   {
@@ -30,7 +46,9 @@
     "    x = 1\n",
     "    for i in range(2, n+1):\n",
     "        x *= i\n",
-    "    return x"
+    "    return x\n",
+    "\n",
+    "assert fac(5) == 120"
    ]
   },
   {
@@ -41,7 +59,9 @@
    "outputs": [],
    "source": [
     "def digit_sum(n):\n",
-    "    return sum([int(x) for x in str(n)])"
+    "    return sum(int(x) for x in str(n))\n",
+    "\n",
+    "assert digit_sum(1234) == 10"
    ]
   },
   {
@@ -62,12 +82,99 @@
     }
    ],
    "source": [
+    "# answer\n",
     "digit_sum(fac(100))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "1b67cdb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14.2 μs ± 80.8 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "%timeit digit_sum(fac(100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aad100ec",
+   "metadata": {},
+   "source": [
+    "### Solution 2 (oneliner)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "955d7942",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import reduce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b8fd8d76",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "648"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# answer\n",
+    "reduce(lambda x, y: x + y, (int(i) for i in str(reduce(lambda x, y: x * y, range(2, 100)))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9bd0ef87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20.7 μs ± 38.5 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "%timeit reduce(lambda x, y: x + y, (int(i) for i in str(reduce(lambda x, y: x * y, range(2, 100)))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b686034f",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "86a8039f",
    "metadata": {},
    "outputs": [
@@ -75,13 +182,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16 μs ± 103 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+      "14.6 μs ± 365 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o digit_sum(fac(100))\n",
-    "euler.save_benchmark(20, t)"
+    "bm = %timeit -o digit_sum(fac(100))\n",
+    "import euler\n",
+    "euler.save_benchmark(20, bm)"
    ]
   }
  ],
@@ -101,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
