--- a/julia/problem_020.ipynb
+++ b/julia/problem_020.ipynb
@@ -42,7 +42,7 @@
    "id": "fa3fb153",
    "metadata": {},
    "source": [
-    "### Solution"
+    "### Solution 1 (factorial)"
    ]
   },
   {
@@ -55,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  888.000 ns (20 allocations: 2.03 KiB)\n"
+      "  894.531 ns (20 allocations: 2.03 KiB)\n"
      ]
     },
     {
@@ -74,6 +74,41 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dc79a1f4",
+   "metadata": {},
+   "source": [
+    "### Solution 2 (reduce)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "03dbb92a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  12.000 μs (617 allocations: 13.71 KiB)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "648"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@btime reduce(+, digits(reduce(*, BigInt(2):99)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0e388137",
    "metadata": {},
    "source": [
@@ -82,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "e2b586b5",
    "metadata": {},
    "outputs": [],
